--- a/build.properties
+++ b/build.properties
@@ -17,8 +17,8 @@
 ##
 # org.glite.slcs.server build.properties
 #
-# $Id: build.properties,v 1.21 2008/07/21 08:41:28 vtschopp Exp $
+# $Id: build.properties,v 1.22 2008/08/21 10:42:44 vtschopp Exp $
 ##
 prefix=/opt/glite
 package.name=glite-slcs-server
-package.version=1.4.1.1
+package.version=1.4.1-2
