package.release - package.build = package.version jar file with release number in name.

--- a/build.properties
+++ b/build.properties
@@ -17,8 +17,11 @@
 ##
 # org.glite.slcs.server build.properties
 #
-# $Id: build.properties,v 1.23 2009/01/15 12:31:48 vtschopp Exp $
+# $Id: build.properties,v 1.24 2009/01/20 12:08:31 vtschopp Exp $
 ##
 prefix=/opt/glite
 package.name=glite-slcs-server
-package.version=1.4.2-1
+package.release=1.4.2
+package.build=1
+package.version=${package.release}-${package.build}
+package.jarname=${package.name}-${package.release}.jar
