--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
     ETICS build for org.glite.slcs.server
 
     Author: Valery Tschopp <tschopp@switch.ch>
-    Version: $Id: build.xml,v 1.20 2008/04/22 15:28:56 vtschopp Exp $
+    Version: $Id: build.xml,v 1.21 2009/01/20 12:08:31 vtschopp Exp $
 -->
 <project name="org.glite.slcs.server" default="local-dist" basedir=".">
 
@@ -54,14 +54,20 @@
     <!-- init -->
     <target name="init" depends="">
         <tstamp />
-        <!-- check for slcs-glite-common.jar in stage -->
-        <available property="slcs.common.jar.exists" file="${stage.lib.dir}/glite-slcs-common.jar"/>
-        <fail unless="slcs.common.jar.exists" message="${stage.lib.dir}/glite-slcs-common.jar is missing. please build org.glite.slcs.common first..."/>
-        
+		<!-- check for the glite-slcs-common jar file in stage -->
+    	<fileset id="glite-slcs-common.fileset" dir="${stage.lib.dir}">
+            <include name="glite-slcs-common-*.jar"/>
+        </fileset>
+        <path id="glite-slcs-common.path">
+        	<fileset refid="glite-slcs-common.fileset" />
+        </path>
+        <available classname="org.glite.slcs.SLCSException"
+                   classpathref="glite-slcs-common.path"
+                   property="glite-slcs-common.exists"/>
+        <fail unless="glite-slcs-common.exists" message="ERROR: glite-slcs-common jar is missing. please build org.glite.slcs.common first..."/>
         <!-- classpath with libraries from ETICS repository -->
         <path id="compile.path">
-<!--            <pathelement path="${classes.dir}"/> -->
-            <pathelement location="${stage.lib.dir}/glite-slcs-common.jar"/>
+            <path refid="glite-slcs-common.path"/>
             <path refid="ext.apache-struts.path"/>
             <path refid="ext.bouncycastle.path"/>
             <path refid="ext.jakarta-commons-codec.path"/>
@@ -112,14 +118,14 @@
     <!-- jar -->
     <target name="jar" depends="compile">
         <!-- jar org.glite.slcs.server classes -->
-        <jar jarfile="${build.dir}/${package.name}.jar" basedir="${classes.dir}" />
+        <jar jarfile="${build.dir}/${package.jarname}" basedir="${classes.dir}" />
     </target>
 
     <!-- OPTIONAL: stage glite-slcs-server.jar in ../stage/share/java dir -->
     <target name="stage" depends="jar">
         <echo message="stage in ${stage.lib.dir}" />
         <mkdir dir="${stage.lib.dir}" />
-        <copy todir="${stage.lib.dir}" file="${build.dir}/${package.name}.jar" />
+        <copy todir="${stage.lib.dir}" file="${build.dir}/${package.jarname}" />
     </target>
    
     <target name="war" depends="jar">
@@ -130,9 +136,11 @@
         <property name="build.lib.dir" location="${build.dir}/war-lib"/>
         <mkdir dir="${build.lib.dir}"/>
         <!-- copy glite-slcs-server lib -->
-        <copy todir="${build.lib.dir}" file="${build.dir}/${package.name}.jar"/>
+        <copy todir="${build.lib.dir}" file="${build.dir}/${package.jarname}"/>
         <!-- copy glite-slcs-common lib -->
-        <copy todir="${build.lib.dir}" file="${stage.lib.dir}/glite-slcs-common.jar"/>
+        <copy todir="${build.lib.dir}" >
+            <fileset refid="glite-slcs-common.fileset"/>
+        </copy>
         <!-- copy all third party libs (without tomcat libs) -->
         <copy todir="${build.lib.dir}" flatten="true">
             <fileset refid="ext.apache-struts.fileset"/>
