--- a/build.properties
+++ b/build.properties
@@ -15,13 +15,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ##
-# org.glite.slcs.server build.properties
+# org.glite.slcs.server ANT build.properteis
 #
-# $Id: build.properties,v 1.24 2009/01/20 12:08:31 vtschopp Exp $
+# $Id: build.properties,v 1.25 2009/01/22 08:56:54 vtschopp Exp $
 ##
 prefix=/opt/glite
 package.name=glite-slcs-server
-package.release=1.4.2
-package.build=1
-package.version=${package.release}-${package.build}
-package.jarname=${package.name}-${package.release}.jar
+source.version=1.4.2
+package.release=1
+package.version=${source.version}-${package.release}
+package.jarname=${package.name}-${source.version}.jar
